--- a/CPP/WordCounter/WordCounter/WordCounter.vcxproj
+++ b/CPP/WordCounter/WordCounter/WordCounter.vcxproj
@@ -128,7 +128,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="WordCounter.cpp" />
+    <ClCompile Include="Start.cpp" />
+    <ClCompile Include="UniqueWordCounterAlgoImpl.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="UniqueWordCounterAlgo.h" />
+    <ClInclude Include="UniqueWordCounterAlgoImpl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
