implement max thread in solution, and test

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /CPP/WordCounter/.vs/WordCounter
 /CPP/WordCounter/WordCounter/x64/Debug
 /CPP/WordCounter/x64/Debug
+/CPP/WordCounter/packages/gmock.1.11.0
+/CPP/WordCounter/WordCounter.UT/x64/Debug
