--- a/CPP/WordCounter/WordCounter.UT/WordCounter.UT.vcxproj.filters
+++ b/CPP/WordCounter/WordCounter.UT/WordCounter.UT.vcxproj.filters
@@ -34,5 +34,6 @@
     <Text Include="Test1.txt" />
     <Text Include="Test2.txt" />
     <Text Include="Test3.txt" />
+    <Text Include="Lorem.txt" />
   </ItemGroup>
 </Project>
